cli/tests/snapshot/snapshots/snapshot__eval_stderr_destructuring_closed_fail.ncl.snap
---
source: cli/tests/snapshot/main.rs
expression: err
---
error: pattern binding failed
  ┌─ [INPUTS_PATH]/errors/destructuring_closed_fail.ncl:3:5
  │
3 │ let {a} = {a=1, b=2}
  │     ^^^   ---------- this value failed to match
  │     │      
  │     this pattern
